upgrade this old monster (#380)