@@ -12,45 +12,26 @@
     <description>A simple freeacs.</description>
     <url>http://freeacs.com</url>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <artifactId>bom</artifactId>
+                <groupId>com.github.freeacs</groupId>
+                <version>1.0.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <junit.version>4.12</junit.version>
-        <sparkjava.version>2.8.0</sparkjava.version>
-        <hikaricp.version>3.3.1</hikaricp.version>
-        <commons-httpclient.version>3.1</commons-httpclient.version>
-        <commons-io.version>2.6</commons-io.version>
-        <commons-codec.version>1.12</commons-codec.version>
-        <commons-lang3.version>3.8.1</commons-lang3.version>
-        <typesafe-config.version>1.3.3</typesafe-config.version>
-        <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
-        <assertj-core.version>3.12.1</assertj-core.version>
-        <flyway.version>5.2.4</flyway.version>
-        <h2.version>1.4.197</h2.version>
-        <wsdl4j.version>1.6.3</wsdl4j.version>
-        <jaxb.version>2.3.1</jaxb.version>
-        <jaxb-runtime.version>2.3.2</jaxb-runtime.version>
-        <activation.version>1.1.1</activation.version>
-        <logback.version>1.2.3</logback.version>
-        <mysql.version>8.0.15</mysql.version>
-        <mariadb-dlls.version>10.2.11</mariadb-dlls.version>
-        <mariadb.version>2.4.0</mariadb.version>
-        <selenium.version>3.141.59</selenium.version>
-        <mockito.version>1.9.5</mockito.version>
-        <commons-fileupload>1.4</commons-fileupload>
-        <httpclient.version>4.5.7</httpclient.version>
-        <jackson.databind>2.9.8</jackson.databind>
-        <freemarker.version>2.3.28</freemarker.version>
-        <spark-freemarker.version>2.7.1</spark-freemarker.version>
-        <unirest.version>1.4.9</unirest.version>
-        <jline.version>0.9.5</jline.version>
-        <dom4j.version>1.6.1</dom4j.version>
-        <jfreechart.version>1.5.0</jfreechart.version>
-        <jcommon.version>1.0.24</jcommon.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <modules>
+        <module>bom</module>
         <module>common</module>
         <module>dbi</module>
         <module>shell</module>
@@ -64,16 +45,55 @@
         <module>tables</module>
         <module>scripts</module>
         <module>distribution</module>
+<!--        <module>tr069-test-app</module>-->
     </modules>
 
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version> <!-- Use an appropriate version -->
+                <configuration>
+                    <release>17</release> <!-- Set your Java version -->
+                    <compilerArgs>
+                        <arg>--add-opens</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>2.7</version>
+                <version>2.16.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
             </plugin>
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                        <source>17</source>
+                        <target>17</target>
+                        <compilerArgument>-parameters</compilerArgument>
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>1.18.30</version>
+                            </path>
+                        </annotationProcessorPaths>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
 </project>
